# kahypar

./: .gitignore  CMakeLists.txt  a.c  compile.sh  example.sh  run_kaffpaD.sh  run_kaffpaD_evo.sh  run_shm.sh
cmake/modules/: gmock.cmake
config/: balance_ip.ini  baseline_balance_ip.ini  baseline_no_balance_ip.ini  cut_acyclic.ini  evo.ini  kaffpaD.ini  km1_acyclic.ini  km1_acyclic_epsilon_prime.ini  km1_acyclic_epsilon_prime_nosoft.ini  kway_topo_pop5.ini  no_balance_ip.ini  sl.ini  test.ini  wip.ini
include/: libkahypar.h
kahypar/: definitions.h  partitioner_facade.h
kahypar/application/: CMakeLists.txt  command_line_options.h  kahip_config.h  kahip_definitions.h  kahip_misc.h  kahypar.cc  kahypar_shm.cc
kahypar/dag/: acyclic_clustering.h  cycle_detector.h  dynamic_ordering.h  fix_acyclicity.h  quotient_graph.h  topological_ordering.h
kahypar/datastructure/: fast_reset_array.h  hypergraph.h
kahypar/io/: hypergraph_io.h  partitioning_output.h  sql_plottools_serializer.h
kahypar/kaffpa/: definitions.h  graph_access.h  partition_config.h
kahypar/partition/: acyclic.h  acyclic_rb.h  context.h  context_enum_classes.h  factories.h  (+5 more)
lib/: libkahypar.cc
tests/: CMakeLists.txt
tools/: CMakeLists.txt  binary_kaffpad_to_hgr.cc  dac_to_hgr_converter.cc  evaluate_binary_kaffpad_graph.cc  graph_to_hyperdag.cc  graph_to_hyperdag_converter.cc  hypergraph_checker.cc  hypergraph_checker.h  hypergraph_statistics.cc  iscas_to_hgr_converter.cc  ispd_to_hgr_converter.cc  metis_graph_reader.h  popp_to_hgr_converter.cc  verify_hgr_graph_partition.cc  verify_partition.cc
(+82 files in other folders)
